# Machine-learning

./: .gitignore  README.md  app.py  kaggle.ipynb  output.csv  pyproject.toml
data/: output.csv
src/: __init__.py  box_plots.py  clustering.ipynb  clustering.py  correlation_grid.py  knn.py
