[tool.poetry]
name = "csc3730"
version = "0.1.0"
description = ""
authors = ["Charles Beam <charleslbeam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
